--- a/_posts/2024-03-04-cfr.markdown
+++ b/_posts/2024-03-04-cfr.markdown
@@ -32,6 +32,8 @@ There aren't that many groupsets for 1x that support drop-bar shifters and mecha
 
 The build for this bike was pretty straightforward. The BSA bottom bracket meant I could easily install a modern Praxis BB suited for the Easton crankset. Chainline isn't 100% what it should be, but it works just fine. I also needed to install an extra adapter to go from the quill stem to a ahead stem, which I easily found in Decathlon. Only one weird issue ensued while building up this project: the rear brake caliper won't tighten in the frame. The bolts that came with the SRAM brakes fitted perfectly fine in the hole in the fork for the front caliper, which tightened just fine. However, the size of the bolts didn't fit for the rear one. Luckily, in the atelier of the school (where I go for evening class in bike mechanics) we found a bolt that after some grinding down fitted fine. Still, somewhere there is play introduced and the rear caliber moves with the slightest touch. It does re-center after braking, so it isn't a major problem and/or didn't prevent riding the bike, but nevertheless it should be fixed. It's probably something obvious that I'm missing, but neither I, nor the teacher found a solution, but it's something I'm definitely coming back to...
 
+UPDATE #1: fixed the brake caliper issue, I don't know how, but after reassembling it from scratch the issue disappeared, so yeah :)
+
 ## The Ride
 
 ### 1x on road
@@ -42,9 +44,11 @@ I never really was a believer in 1x for road. But honestly, the simplicity is ad
 
 So, how does a 27 year old frame ride compared to modern stuff? Pretty good I would say, although the difference is very much notable (luckily lol). The first thing I noticed compared to my Cinelli and TCR is the stiffness. Bike reviewers and industry throw this term around a lot, but this is actually the first time I get what it is. Going from the carbon TCR to the alloy Cinelli, I did notice some difference in "willingness to accelerate", although if you put carbon wheels under the Cinelli, it still is really responsive in its acceleration. This bike on the other hand, is not so. While still feeling nimble and aggressive (probably due to the fit with quite the amount of drop from saddle to handlebars), you can feel the flex around the bottom bracket, seatstays and chainstays when you stand on the pedals and push hard. Doesn't mean you can't go hard with it of course (managed to improve my PR on the Berendries on it) and it's only logical that I'm able to feel the progression in carbon frames between a frame from 1997 and one from 2017. Wheels probably also play a role, since it currently has a "basic" set of alloy wheels, my guess is that with some stiffer carbon ones, the "pop" will be a bit better. Other than that the bike is a joy to ride. It still is a pure-bred race bike and it begs for the rider to put its head down and push hard. The long stem and aggressive fit really makes it hard to go easy on this one. Cornering is fine, but I'm not used to having such a long stem, so I don't have the same amount of trust throwing it into a sharp corner. The combination of the latex tubes with tried and tested 25mm Conti GP5000's also really is a winner and comfort wise it rides super nice.
 
+UPDATE #2: apparently the cornering was pretty shite because the upper bearing in the headset was completely shut. Managed to find a spare bearing ring at a local bikeshop and the cornering is waaay smoother now! 
+
 ## Conclusion
 
-All in all, I'm really happy with how this project turned out. The looks of the bike are amazing and it performs more than adequately for its age and price/quality of components. Writing this, I rode approx. 500km on it, including a longer ride of ~100km on flat terrain and one of ~80km on hills and cobbles. Total cost of the project was €864, so by no means a full budget build, as I did chose to go with the components I liked and spent some extra on the cranks, chainring, tires, etc. On the other hand, I'd argue that a new bike for under €900  is not a bad deal, especially it being really unique and the feeling of riding something that you assembled yourself is really awesome. Sure, I wouldn't use it for really fast club rides and/races, but for casual spring and summer riding, commuting, rides with my girlfriend, etc. this bike really does it job very well. It doesn't fill a functional gap in my bike collection, but hey, if everything in live needed to be functional and efficient, it would be a boring mess. I guess that sentence really sums up the sentiment of this bike, nonsensical, 1x, gold chain, carbon as old as I am, pure fun! 
+All in all, I'm really happy with how this project turned out. The looks of the bike are amazing and it performs more than adequately for its age and price/quality of components. Writing this, I rode approx. 500km on it, including a longer ride of ~100km on flat terrain and one of ~80km on hills and cobbles. Total cost of the project was €864, so by no means a full budget build, as I did chose to go with the components I liked and spent some extra on the cranks, chainring, tires, etc. On the other hand, I'd argue that a new bike for under €900  is not a bad deal, especially it being really unique and the feeling of riding something that you assembled yourself is really awesome. Sure, I wouldn't use it for really fast club rides and/races, but for casual spring and summer riding, commuting, rides with my girlfriend, etc. this bike really does it job very well. It doesn't fill a functional gap in my bike collection, but hey, if everything in live needed to be functional and efficient, it would be a boring mess. I guess that sentence really sums up the sentiment of this bike, nonsensical, 1x, gold chain, carbon as old as I am, pure fun!
 
 ## Gallery
 ![side_shot](/docs/assets/giantcfr/side_wall.jpg)
